--- a/2-react-router/package.json
+++ b/2-react-router/package.json
@@ -13,12 +13,16 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.26.1",
     "history": "^1.17.0",
     "ip": "^1.1.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^1.0.3",
+    "react-select": "^1.0.0-rc.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.9",
+    "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
