--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^3.0.0",
+    "react-select": "^1.0.0-rc.2",
     "requirejs": "^2.3.2",
     "webpack": "^1.14.0",
+    "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^1.16.2"
   }
 }
