--- a/2-react-router/package.json
+++ b/2-react-router/package.json
@@ -17,10 +17,13 @@
     "history": "^1.17.0",
     "ip": "^1.1.4",
     "react": "^0.14.6",
+    "react-bootstrap-typeahead": "^1.0.0-beta4",
     "react-dom": "^0.14.6",
     "react-router": "^1.0.3",
     "react-select": "^1.0.0-rc.2",
+    "react-typeahead-component": "^0.9.0",
     "style-loader": "^0.13.1",
+    "typeahead-react": "^0.1.0",
     "webpack": "^1.12.9",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^1.14.1"
