--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^0.14.6",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
+    "react-typeahead-component": "^0.9.0",
     "requirejs": "^2.3.2",
+    "typeahead-react": "^0.1.0",
     "webpack": "^1.14.0",
     "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^1.16.2"
