--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "history": "^1.17.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-promise": "^1.1.2",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.2",
     "react-typeahead-component": "^0.9.0",
