added react-redux design flow without programatic routing from actions

--- a/2-react-router/package.json
+++ b/2-react-router/package.json
@@ -19,9 +19,14 @@
     "react": "^0.14.6",
     "react-bootstrap-typeahead": "^1.0.0-beta4",
     "react-dom": "^0.14.6",
+    "react-redux": "^5.0.2",
     "react-router": "^1.0.3",
+    "react-router-redux": "^4.0.7",
     "react-select": "^1.0.0-rc.2",
     "react-typeahead-component": "^0.9.0",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "typeahead-react": "^0.1.0",
     "webpack": "^1.12.9",
